--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -393,7 +393,7 @@ echo Done.
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400;VE_PATENTED;CFD_USE_SHADERS"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -403,9 +403,7 @@ echo Done.
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="4"/>
 			<Tool
-				Name="VCCustomBuildTool"
-				AdditionalDependencies="VjObs.idl;Obsever.idl;VjObs.cpp;Observer.cpp;VjObs.java;Observer.java"
-				Outputs="VjObs_i.cxx;Observer_i.cxx;VjObs.java;Observer.java"/>
+				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wxmsw24d.lib omniORB405_rtd.lib omnithread30_rtd.lib omniDynamic405_rtd.lib"
@@ -446,6 +444,9 @@ echo Done.
 			Filter="">
 			<File
 				RelativePath="..\VE_Builder\Utilities\gui\spinctld.cpp">
+			</File>
+			<File
+				RelativePath=".\Ve_ui\UI_AdvectionPanel.cxx">
 			</File>
 			<File
 				RelativePath=".\Ve_ui\UI_App.cpp">
@@ -555,6 +556,9 @@ echo Done.
 			</File>
 			<File
 				RelativePath="..\VE_Builder\Utilities\gui\spinctld.h">
+			</File>
+			<File
+				RelativePath=".\Ve_ui\UI_AdvectionPanel.h">
 			</File>
 			<File
 				RelativePath=".\Ve_ui\UI_App.h">
