--- a/VE_Conductor/GraphicalPluginLib.vcproj
+++ b/VE_Conductor/GraphicalPluginLib.vcproj
@@ -474,7 +474,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug_TAO_OSG|Win32"
-			OutputDirectory="./GraphicalPluginLib/$(ConfigurationName)"
+			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory="./GraphicalPluginLib/$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -492,9 +492,9 @@
 				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=""
-				AssemblerListingLocation=".\$(ConfigurationName)/"
-				ObjectFile=".\$(ConfigurationName)/"
-				ProgramDataBaseFileName=".\$(ConfigurationName)/"
+				AssemblerListingLocation="$(IntDir)"
+				ObjectFile="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
 				WarningLevel="2"
 				SuppressStartupBanner="TRUE"
 				Detect64BitPortabilityProblems="TRUE"
@@ -507,16 +507,16 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_ogl_d.lib osgd.lib osgUtild.lib osgDBd.lib OpenThreadsWin32d.lib Producerd.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib xerces-c_2D.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib wxbase26d.lib wxmsw26d_core.lib VE_SceneGraph_osgd.lib VEConductorLib_d.lib VEXplorerLib_tao_osg_d.lib VEUtilLib_tao_osg_d.lib"
 				ShowProgress="0"
-				OutputFile="$(VE_SUITE_HOME)/lib/win32/GraphicalPlugin_tao_osg_d.dll"
+				OutputFile="$(OutDir)/GraphicalPlugin_tao_osg_d.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="FALSE"
 				AdditionalLibraryDirectories="&quot;$(OSGHOME)\lib&quot;;&quot;$(OSGHOME)\..\OpenThreads\lib\win32&quot;;&quot;$(OSGHOME)\..\Producer\lib&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(VTK_HOME)\bin\debug&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(XERCESCROOT)\lib&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;;&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/GraphicalPlugin_tao_osg_d.pdb"
+				ProgramDatabaseFile="$(IntDir)/GraphicalPlugin_tao_osg_d.pdb"
 				SubSystem="1"
-				ImportLibrary="$(VE_SUITE_HOME)/lib/win32/GraphicalPlugin_tao_osg_d.lib"
+				ImportLibrary="$(OutDir)/GraphicalPlugin_tao_osg_d.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
