--- a/VE_Xplorer/Makefile.graphicalpluginlib
+++ b/VE_Xplorer/Makefile.graphicalpluginlib
@@ -34,7 +34,7 @@ CFDUNAME = $(shell uname)
 ifeq ($(SCENE_GRAPH), OSG)
    OSG = _osg
 else
-   OSG =
+   OSG = _pf
 endif
 
 ifeq ($(TAO_BUILD), TRUE)
@@ -44,7 +44,6 @@ endif
 
 # for osg and patented stuff
 ifeq ($(VE_PATENTED), TRUE)
-   EXTRA_INCLUDES+= -I${VE_SUITE_HOME}
    EXTRA_CXXFLAGS+= -D_OSG -DVE_PATENTED
    PATENTED_TAG = .vep
 endif
@@ -59,21 +58,8 @@ endif
 SRCS=\
    cfdVEBaseClass.cxx
 
-EXTRA_INCLUDES+= -I$(VE_SUITE_HOME) -I$(VE_SUITE_HOME)/VE_Xplorer
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Conductor/Framework
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Builder/Translator
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_SceneGraph
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_TextureBased
+EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Xplorer
-EXTRA_PATH_FOR_SOURCES+= ${VE_SUITE_HOME}/VE_Conductor/Framework
-EXTRA_PATH_FOR_SOURCES+= ${VE_SUITE_HOME}/VE_Builder/Translator
-
-#LIBS=   $(LIBS_BEGIN) $(SYS_LIBS) $(LIBS_END)
-#include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
-#include $(DZR_BASE_DIR)/mk/dzr.java-app.mk
-
-#include $(DZR_BASE_DIR)/ext/tweek/dzr.tweek.mk
-#include $(TWEEK_BASE_DIR)/share/tweek/tweek.appdefs.mk
 
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
@@ -94,13 +80,8 @@ default: all
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 all:
 	mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)
-#	$(MAKE) cxx_idl
-#	$(MAKE) java_idl
 	$(MAKE) -f Makefile.graphicalpluginlib NO_DEPEND=0 cxx
 	$(MAKE) -f Makefile.graphicalpluginlib $(APP_NAME)
-#	$(MAKE) java
-#	$(MAKE) NetworkTestBean.jar
-#	-$(MAKE) install
 
 srcdir= .
 
@@ -111,6 +92,7 @@ include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
+
 ifeq ($(SCENE_GRAPH), OSG)
    include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.osg.mk
 else
@@ -128,8 +110,6 @@ STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
 EXTRA_LDFLAGS+= -shared
-# To build dll for dynamic load of plugins
-EXTRA_CXXFLAGS+= -DWXMAKING_PLUGIN_DLL
 # IRIX needs these flags
 ifeq (${CFDUNAME},IRIX64)
    EXTRA_CXXFLAGS+= 
@@ -144,26 +124,10 @@ CXX_GEN_DIR= .
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
-#cxx_idl: $(IDL_CXX_FILES)
-
-#%.cpp %.h: %.idl
-#	$(CXX_IDL) $(CXX_IDL_OPTS) $(CXX_IDL_INCLUDES) $<
-
-#java_idl: $(IDL_JAVA_FILES)
-
-#%.java: %.idl
-#	$(JAVA_IDL) $(JAVA_IDL_OPTS) $(JAVA_IDL_INCLUDES) $<
-
 cxx: $(OBJS)
-
-#java: $(CLASSES)
 
 ${APP_NAME}: $(OBJS)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-
-#install:
-#	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
-#	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
 # in addition to the created *.o files and any core files, the following files will be removed during "gmake clean"
 CLEAN_FILES+= $(APP_NAME) $(OBJDIR)/* 
