--- a/VE_Open/XML/Makefile
+++ b/VE_Open/XML/Makefile
@@ -55,12 +55,14 @@ SRCS=\
    XMLReaderWriter.cxx\
    DOMDocumentManager.cxx
 
+#$NO_DEPEND= YES 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
 #EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
-
-#EXTRA_LDFLAGS+= -L$(VJ_DEPS_DIR)/lib
+#EXTRA_LDFLAGS+= -g
+#EXTRA_CXXFLAGS+= -g
+#-L$(VJ_DEPS_DIR)/lib
 #DSO_PLUGIN_DEPS+= $(shell vrjuggler-config --extra-libs)
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
