--- a/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
@@ -122,8 +122,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="0"
+				AdditionalIncludeDirectories="&quot;$(WX_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;;&quot;$(WX_HOME)\lib\vc_dll\msw&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;WXUSINGDLL"
+				RuntimeLibrary="2"
+				OpenMP="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -140,8 +142,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="wxbase28.lib wxmsw28_core.lib vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib VE_UtilLib.lib libboost_filesystem-vc80-mt-1_33_1.lib"
 				OutputFile="$(OutDir)/vtkTo3DTexture.exe"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VTK_HOME)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
