--- a/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
@@ -99,7 +99,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
+			OutputDirectory="$(VE_SUITE_HOME)\bin\win32"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
