--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -26,7 +26,7 @@ sources = Split("""
     ModelOccluder.cxx
     DCS.cxx
     SceneNode.cxx
-    FILE.cxx
+    CADCombo.cxx
     PhysicsSimulator.cxx
 """)
 
@@ -53,7 +53,7 @@ headers = Split("""
     ModelOccluder.h
     DCS.h
     SceneNode.h
-    FILE.h
+    CADCombo.h
     PhysicsSimulator.h
 """)
 
